--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -25,7 +25,7 @@
 	</section>
 
 	<section>
-	<img src="images/img_1879.jpg" alt="smoothie photo" title="Orange Smoothie">
+	<img src="images/img_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 	<ul>
 
 		<li>smoothie, meal + snack options</li>
