--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 	
-		<h1>WILD + simple</h1>
+		
+		<div class="outer">
+			<h1>
+				<span class="hr3">WILD</span>
+				<span class="hr4">+</span>
+				<span class="hr5">simple</span>
+			</h1>
+		</div>
 
 		<nav>
 			<a href="">home</a>
