--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WILD + simple</title>
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css/css">
 </head>
 
 <body>
