change where email link occurs

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -44,7 +44,7 @@
 	</section>
 
 
-	<p>please feel free to reach out to us with any questions you have before taking the journey of creative cooking in your kitchen <a href="mailto:kmarshallvt@gmail.com">email</a></p>
+	<p>please feel free to <a href="mailto:kmarshallvt@gmail.com">reach out to us</a> with any questions you have before taking the journey of creative cooking in your kitchen </p>
 
 
 </body>
