updated logo type

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<header>
 	
 		
 		<div class="outer">
@@ -16,6 +17,10 @@
 				<span class="hr5">simple</span>
 			</h1>
 		</div>
+		<div> class="uitility">
+				<a href="">log in<a/>
+				<a href="">shop</a>
+		</div>
 
 		<nav>
 			<a href="">home</a>
@@ -24,6 +29,7 @@
 			<a href="">shop</a>
 			<a href="">blog</a>
 		</nav>
+	</header>
 	
 	
 	<section>
@@ -34,6 +40,7 @@
 
 	<section>
 	<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+	<h2>Plan features</h2>
 	<ul>
 
 		<li>smoothie, meal + snack options</li>
@@ -41,6 +48,14 @@
 		<li>all meal kits are simple, containing just a few pantry basics and requiring no more than three fresh items (with options for more based on recipe chosen</li>
 		<li>we spend the time creating colorful and lively meals and you bring them to life in your kitchen!</li>
 	</ul>
+	</section>
+	<section>
+		<h2>Sign up below to receive updates to the meal kit options</h2>
+		<form 
+			<label for ="femail">Enter your email</label>
+			<input type="email" id="femail">
+			<input type="submit" value="Sign up">
+		</form>
 	</section>
 
 
