--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -12,7 +12,7 @@
 		
 		<div class="outer">
 			<h1>
-				<span class="hr3">WILD</span>
+				<span class="hr3">wild</span>
 				<span class="hr4">+</span>
 				<span class="hr5">simple</span>
 			</h1>
