fixed utility typo

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -17,7 +17,7 @@
 				<span class="hr5">simple</span>
 			</h1>
 		</div>
-		<div> class="uitility">
+		<div> class="utility">
 				<a href="">log in<a/>
 				<a href="">shop</a>
 		</div>
