--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -36,9 +36,9 @@
 			<p>We spend the time creating super healthy meals that ALSO taste amazing!
 			</p>
 
-			<p>You gather the fresh ingredients when you are ready and simply enjoying creating the meal, as you see fit ! </p>
+			<p>You simply enjoy time in the kitchen cooking! </p>
 
-			<p>We curate healthy and flavorful recipes and pair them with nutrient dense pantry basics in a meal kit. Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try, and gather the fresh ingredients before going to town in the kitchen! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try, and gather the fresh ingredients before going to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
 
 		<section>
