more content updates

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -38,17 +38,16 @@
 
 			<p>You simply enjoy time in the kitchen cooking! </p>
 
-			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try, and gather the fresh ingredients before going to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try and go to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
 
 		<section>
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<h2>Plan features</h2>
 			<ul>
-
-				<li>smoothie, meal + snack options</li>
-				<li>you specify recipe options such as vegetarian, vegan, or with animal protein</li>
-				<li>all meal kits are simple, containing just a few pantry basics and requiring no more than three fresh items (with options for more based on recipe chosen</li>
+				<li>meal kit options: smoothies, meals, snacks</li>
+				<li>recipe options: omnivore, pescaterian, vegetarian, vegan</li>
+				<li>WILD + simple meal kits contain a few pantry basics. You add 3 or more fresh ingredients depending on recipe</li>
 				<li>we spend the time creating colorful and lively meals and you bring them to life in your kitchen!</li>
 			</ul>
 		</section>
