more content updates

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -47,8 +47,9 @@
 			<ul>
 				<li>meal kit options: smoothies, meals, snacks</li>
 				<li>recipe options: omnivore, pescaterian, vegetarian, vegan</li>
-				<li>WILD + simple meal kits contain a few pantry basics. You add 3 or more fresh ingredients depending on recipe</li>
-				<li>we spend the time creating colorful and lively meals and you bring them to life in your kitchen!</li>
+				<li>WILD + simple meal kits contain a few pantry basics</li>
+				<li>You add 3 or more fresh ingredients depending on recipe</li>
+				<li>we spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
 		</section>
 		<section>
