--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -45,11 +45,11 @@
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<h2>Plan features</h2>
 			<ul>
-				<li>meal kit options: smoothies, meals, snacks</li>
-				<li>recipe options: omnivore, pescaterian, vegetarian, vegan</li>
+				<li>Meal kit options: smoothies, meals, snacks</li>
+				<li>Recipe options: omnivore, pescaterian, vegetarian, vegan</li>
 				<li>WILD + simple meal kits contain a few pantry basics</li>
 				<li>You add 3 or more fresh ingredients depending on recipe</li>
-				<li>we spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
+				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
 		</section>
 		<section>
