--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -2,14 +2,10 @@
 <html>
 	<head>
 		<title>WILD + simple</title>
-
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-
 	<body>
 		<header>
-	
-		
 			<div class="outer">
 				<h1>
 					<span class="hr3">wild</span>
@@ -30,17 +26,12 @@
 				<a href="">blog</a>
 			</nav>
 		</header>
-	
-	
 		<section>
 			<p>We spend the time creating super healthy meals that ALSO taste amazing!
 			</p>
-
 			<p>You simply enjoy time in the kitchen cooking! </p>
-
 			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try and go to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
-
 		<section>
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<h2>Plan features</h2>
@@ -53,6 +44,14 @@
 			</ul>
 		</section>
 		<section>
+			<h2> Check out our Instagram for inspiring versions of our meal kit recipes</h2>
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+		</section>
+		<section>
 			<h2>Sign up below to receive updates to the meal kit options</h2>
 			<form 
 				<label for ="femail">Enter your email</label>
@@ -60,9 +59,6 @@
 				<input type="submit" value="Sign up">
 			</form>
 		</section>
-
-
 		<p>please feel free to <a href="mailto:kmarshallvt@gmail.com">reach out to us</a> with any questions you have before taking the journey of creative cooking in your kitchen </p>
-
 	</body>
 </html>
