--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -27,20 +27,21 @@
 			</nav>
 		</header>
 		<section>
-			<p>We spend the time creating super healthy meals that ALSO taste amazing!
+			<p>Our ideas, your
 			</p>
 			<p>You simply enjoy time in the kitchen cooking! </p>
 			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try and go to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
 		<section>
-			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
-			<h2>Plan features</h2>
+			<img src="images/IMG_3421.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<h2>Plan features:</h2>
 			<ul>
-				<li>Meal kit options: smoothies, meals, snacks</li>
-				<li>Recipe options: omnivore, pescaterian, vegetarian, vegan</li>
-				<li>WILD + simple meal kits contain a few pantry basics</li>
-				<li>You add 3 or more fresh ingredients depending on recipe</li>
-				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
+				<li>meal kit options:   smoothies, meals, snacks</li>
+				<li>recipe options:     omnivore, pescaterian, vegetarian, vegan</li>
+				<li>meal kit contents:  pantry basics, recipe cards (pdf options)</li>
+				<li>your contribution:  3 or more fresh ingredients depending on recipe</li>
+				<br>
+				<li>we spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
 		</section>
 		<section>
