--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -27,7 +27,8 @@
 			</nav>
 		</header>
 		<section>
-			<p>Our ideas, your
+			<p>Our ideas, your time in the kitchen !
+				
 			</p>
 			<p>You simply enjoy time in the kitchen cooking! </p>
 			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try and go to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
