--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -43,7 +43,7 @@
 				<li>meal kit contents:  pantry basics, recipe cards (pdf options)</li>
 				<li>your contribution:  3 or more fresh ingredients depending on recipe</li>
 				<br>
-				<li>we spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
+				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
 		</section>
 		<section>
