--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -29,9 +29,9 @@
 			</nav>
 		</header>
 		<section>
-			<p><strong>We craft colorful and nutrient dense meals for you so you can simple enjoy time in the kitchen cooking !</strong>
+			<p><strong>It's simple! We craft the meals + you have fun in the kitchen!</strong>
 			</p>
-			<p>Each kit contains 3-5 recipe options. Once you receive the kit, you choose which recipe option to try and go to town in the kitchen. Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
 		<section>
 			<img src="images/IMG_3421.jpeg" alt="smoothie photo" title="Orange Smoothie">
