--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<div> class="wrapper">
 		<header>
 			<div class="outer">
 				<h1>
@@ -27,12 +28,8 @@
 				<a href="">blog</a>
 			</nav>
 		</header>
-		<section>
-			<p><strong>It's simple! We craft the meals + you have fun in the kitchen!</strong>
-			</p>
-			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
-		</section>
-		<section>
+		<section id="main">
+			<aside class="hero image with bulleted list">
 			<img src="images/IMG_3421.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<h2>Plan features:</h2>
 			<ul>
@@ -43,15 +40,21 @@
 				<br>
 				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
+			</aside>
+			<article class="product info and EXPLORE button">
+			<p><strong>It's simple! We craft the meals + you have fun in the kitchen!</strong>
+			</p>
+			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+			</article>
 		</section>
-		<section>
+		
+		<footer>
 			<h2> Check out our Instagram for inspiring versions of our meal kit recipes</h2>
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
-		</section>
 		<section>
 			<h2>Sign up below to receive updates to the meal kit options</h2>
 			<form 
@@ -61,5 +64,7 @@
 			</form>
 		</section>
 		<p>please feel free to <a href="mailto:kmarshallvt@gmail.com"><strong>reach out to us</strong></a> with any questions you have before taking the journey of creative cooking in your kitchen </p>
+		</footer>
+		</div>
 	</body>
 </html>
