--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div> class="wrapper">
+		<div class="wrapper">
 		<header>
 			<div class="outer">
 				<h1>
