--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -13,38 +13,38 @@
 					<span class="hr4">+</span>
 					<span class="hr5">simple</span>
 				</h1>
-			</div>
-			<div class="utility">
-				<strong>
-					<a href="">log in<a/>
+				<br>
+				<nav>
+					<a href="">home</a>
+					<a href="">about</a>
+					<a href="">kits</a>
 					<a href="">shop</a>
-				</strong>
+					<a href="">blog</a>
+					<a href="">log in</a>
+				</nav>
 			</div>
-			<nav>
-				<a href="">home</a>
-				<a href="">about</a>
-				<a href="">kits</a>
-				<a href="">shop</a>
-				<a href="">blog</a>
-			</nav>
 		</header>
 		<section id="two_column" class="clearfix">
 			<aside id="left">
-			<img src="images/IMG_3421.jpeg" alt="smoothie photo" title="Orange Smoothie" id="lasagna">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie" id="lasagna">
 			<h2>Plan features:</h2>
 			<ul>
 				<li>meal kit options:   smoothies, meals, snacks</li>
 				<li>recipe options:     omnivore, pescaterian, vegetarian, vegan</li>
 				<li>meal kit contents:  pantry basics, recipe cards (pdf options)</li>
 				<li>your contribution:  3 or more fresh ingredients depending on recipe</li>
-				<br>
 				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
 			</aside>
 			<article id="right">
-			<p><strong>It's simple! We craft the meals + you have fun in the kitchen!</strong>
+			<p><strong>We craft the meals + you have fun in the kitchen!</strong>
 			</p>
+			<br>
 			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+			<br>
+			<hr>
+			<br>
+			<a href="">shop now</a>
 			</article>
 		</section>
 		
