--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,13 +7,12 @@
 	<body>
 		<div class="wrapper">
 		<header>
-			<div class="outer">
+			<div class="clearfix">
 				<h1>
 					<span class="hr3">wild</span>
 					<span class="hr4">+</span>
 					<span class="hr5">simple</span>
 				</h1>
-				<br>
 				<nav>
 					<a href="">home</a>
 					<a href="">about</a>
@@ -27,7 +26,9 @@
 		<section id="two_column" class="clearfix">
 			<aside id="left">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie" id="lasagna">
-			<h2>Plan features:</h2>
+			</aside>
+			<article id="right">
+				<h2>Plan features:</h2>
 			<ul>
 				<li>meal kit options:   smoothies, meals, snacks</li>
 				<li>recipe options:     omnivore, pescaterian, vegetarian, vegan</li>
@@ -35,18 +36,14 @@
 				<li>your contribution:  3 or more fresh ingredients depending on recipe</li>
 				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
 			</ul>
-			</aside>
-			<article id="right">
-				<hr>
-				<br>
-				<p><strong>We craft the meals + you have fun in the kitchen!</strong>
-				</p>
-				<br>
-				<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
-				<br>
-				<br>
-				<a href="">shop now</a>
+			<a href="">shop now</a>
 			</article>
+		</section>
+
+		<section>
+			<p><strong>We craft the meals + you have fun in the kitchen!</strong>
+				</p>
+				<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</section>
 		
 		<footer>
