--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -40,11 +40,11 @@
 			</article>
 		</section>
 
-		<section>
+		<div class="what we do">
 			<p><strong>We craft the meals + you have fun in the kitchen!</strong>
 				</p>
 				<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
-		</section>
+		</div>
 		
 		<footer>
 			<h2> Check out our Instagram for inspiring versions of our meal kit recipes</h2>
