--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -23,38 +23,36 @@
 				</nav>
 			</div>
 		</header>
-		<section id="two_column" class="clearfix">
-			<aside id="left">
-			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie" id="lasagna">
-			</aside>
-			<article id="right">
+		<section class="clearfix">
+			<img class="left" 
+			src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<div class="right">  
 				<h2>Plan features:</h2>
-			<ul>
-				<li>meal kit options:   smoothies, meals, snacks</li>
-				<li>recipe options:     omnivore, pescaterian, vegetarian, vegan</li>
-				<li>meal kit contents:  pantry basics, recipe cards (pdf options)</li>
-				<li>your contribution:  3 or more fresh ingredients depending on recipe</li>
-				<li>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</li>
-			</ul>
-			<a href="">shop now</a>
-			</article>
+				<ul>
+					<li><strong>Meal kit options:</strong> smoothies, meals, snacks</li>
+					<li><strong>Recipe options:</strong> omnivore, pescaterian, vegetarian, vegan</li>
+					<li><strong>Meal kit contents:</strong> pantry basics, recipe cards (pdf options)</li>
+					<li><strong>Your contribution:</strong> 3 or more fresh ingredients depending on recipe</li>
+					<li><strong>We spend the time creating colorful and lively meals + you bring them to life in your kitchen!</strong></li>
+				</ul>
+				<a href="#" class="shop">shop now</a>
+			</div>
 		</section>
-
-		<div class="what we do">
-			<p><strong>We craft the meals + you have fun in the kitchen!</strong>
-				</p>
-				<p>Our meal kits are distinctive. Each kit contains the pantry basics needed + 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
+		<div class="whatwedo">
+			<h2>We craft the meals + you have fun in the kitchen!</h2>
+			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed and 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</div>
+		</section>
 		
 		<footer>
-			<h2> Check out our Instagram for inspiring versions of our meal kit recipes</h2>
+			<h3> Check out our Instagram for inspiring versions of our meal kit recipes</h3>
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 		<section>
-			<h2>Sign up below to receive updates to the meal kit options</h2>
+			<h4>Sign up below to receive updates to the meal kit options</h4>
 			<form 
 				<label for ="femail">Enter your email</label>
 				<input type="email" id="femail">
