--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,7 +5,6 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="wrapper">
 		<header>
 			<div class="clearfix">
 				<h1>
@@ -43,24 +42,24 @@
 			<p>Our meal kits are distinctive. Each kit contains the pantry basics needed and 3-5 recipe options. You choose which recipe option to try and pick up the fresh ingredients. It's flexible! Depending on how many you are cooking for, the meal kit will make 1-3 meals, allowing you to try the different recipes we send along. Our goal is to inspire joy and creativity in your kitchen. You decide when and how to make your meals and pick up the fresh items needed when it works for you!</p>
 		</div>
 		</section>
-		
-		<footer>
-			<h3> Check out our Instagram for inspiring versions of our meal kit recipes</h3>
+		<div class="IG">
+			<h3> check out our instagram for inspiring versions of our meal kit recipes</h3>
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+			<img src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
+		</div>
 		<section>
+		<div class="signup"> 
 			<h4>Sign up below to receive updates to the meal kit options</h4>
 			<form 
 				<label for ="femail">Enter your email</label>
 				<input type="email" id="femail">
 				<input type="submit" value="Sign up">
 			</form>
-		</section>
-		<p>please feel free to <a href="mailto:kmarshallvt@gmail.com"><strong>reach out to us</strong></a> with any questions you have before taking the journey of creative cooking in your kitchen </p>
-		</footer>
 		</div>
+		</section>
 	</body>
 </html>
