--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -25,7 +25,7 @@
 		<section class="clearfix">
 			<img class="left" 
 			src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
-			<div class="right">  
+			<div class="left">  
 				<h2>Plan features:</h2>
 				<ul>
 					<li><strong>Meal kit options:</strong> smoothies, meals, snacks</li>
