--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<header>
-			<div class="clearfix">
+		<header class="clearfix">
+			 
 				<h1>
 					<span class="hr3">wild</span>
 					<span class="hr4">+</span>
@@ -21,9 +21,9 @@
 					<a href="">blog</a>
 					<a href="">log in</a>
 				</nav>
-			</div>
+		
 		</header>
-		<section class="clearfix">
+		<section class="clearfix intro"> 
 			<img class="left" 
 			src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<div class="left">  
