--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,7 +7,6 @@
 	</head>
 	<body>
 		<header class="clearfix">
-			 
 				<h1>
 					<span class="hr3">wild</span>
 					<span class="hr4">+</span>
@@ -21,10 +20,9 @@
 					<a href="">blog</a>
 					<a href="">log in</a>
 				</nav>
-		
 		</header>
 		<section class="clearfix intro"> 
-			<img class="left" 
+			<img class="left">
 			src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<div class="left">  
 				<h2>Plan features:</h2>
