--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -22,7 +22,7 @@
 				</nav>
 		</header>
 		<section class="clearfix intro"> 
-			<img class="left">
+			<img class="left"
 			src="images/IMG_1879.jpeg" alt="smoothie photo" title="Orange Smoothie">
 			<div class="left">  
 				<h2>Plan features:</h2>
